<resources>
    <string name="app_name">MyMediCare</string>
    <string name="username">Username</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="enter_result">Enter a test result</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">No account?</string>
    <string name="enter_test_result">Enter Test Result</string>
    <string name="your_result">Your Result</string>
    <string name="you_recorded">You told us that you recorded</string>
    <string name="we_calc">We\'ve calculated this as</string>
    <string name="result">[RESULT]</string>
    <string name="risk_level">[RISK LEVEL]</string>
    <string name="contact_health_care_provider">Contact Health Care Provider</string>
    <string name="exit">Exit</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="background_texxt">Background: WHITE</string>
    <string name="fontText">Font size: 22</string>
    <string name="nameString">Name: [NAME]</string>
    <string name="ageString">Age: [AGE]</string>
    <string name="addressString">Address: [ADDRESS]</string>
    <string name="numberString">Phone Number: [NUMBER]</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Street Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign UP</string>
    <string name="signupTerms">By pressing sign up you \n agree to the MyMediCare terms</string>
    <string name="bloodInputHelp">Separate your two results with a "/"</string>
    <string name="editCap">EDIT</string>
    <string name="save">Save</string>
    <string name="preferred_contact_method">Preferred contact method:</string>
    <string name="select_contact">Select Contact</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="changeContact">Change Contact</string>
    <string name="change_password">Change Password</string>
    <string name="change_contact">Change Contact</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_contact">New Contact</string>
    <string name="hcp_Contact_details">Health Care provider Contact details</string>
    <string name="change">Change</string>
    <string name="temperature">Temperature</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="calculate">Calculate</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="signup">Sign Up</string>
    <string name="backgroundlabel">Background:</string>
    <string-array name="backgroundColours">
        <item>White</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
    </string-array>
</resources>